fixed footer alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -59,10 +59,6 @@
     }
   }
 
-  .navbar {
-
-  }
-
   .navbar-default {
     background-color: $pantone412C;
     border-color: $pantoneBlack7;
@@ -73,6 +69,7 @@
         height: 50px;
       }
     }
+
   }
 
 
@@ -101,7 +98,12 @@
     text-align: center;
     padding-top: 19px;
     color: $white;
-  }
+    position: fixed;
+    height: 50px;
+    bottom: 0;
+    width: 100%;
+}
+
 
 /* Responsive: Portrait tablets and up */
   @media screen and (min-width: 768px) {
